resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-cb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argocd.example.net
    http:
      paths: /
      - backend:
          serviceName: argocd-server
          servicePort: http
  tls:
    - hosts:
      - argocd.example.net
      secretName: example-net-tls
