resources/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: elastic.example.net
    http:
      paths:
        - path: /
          backend:
            serviceName: elasticsearch-master-headless
            servicePort: 9200
  tls:
    - hosts:
      - elastic.example.net
      secretName: example-net-tls
